[gd_scene load_steps=13 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_vat5m"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="2_b0fo8"]
[ext_resource type="Script" path="res://scripts/action.gd" id="2_mki4s"]
[ext_resource type="Resource" uid="uid://b8jws10ql6r5u" path="res://weapons/fists.tres" id="2_uh7ge"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://sprites/burst_animation.tres" id="4_m6ukc"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://sounds/walking.ogg" id="5_ics1s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.0

[sub_resource type="Animation" id="Animation_got24"]
resource_name = "Aim_down_sight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.2, -1, -2.25), Vector3(-0.019871, -1, -1.55)]
}

[sub_resource type="Animation" id="Animation_at4yd"]
resource_name = "Aim_down_sight_hold"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.019871, -1, -1.55)]
}

[sub_resource type="Animation" id="Animation_p33us"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.2, -1, -2.25)]
}

[sub_resource type="Animation" id="Animation_pb70m"]
resource_name = "Swing"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.837758, 0, 0), Vector3(0.598648, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_erlf8"]
_data = {
"Aim_down_sight": SubResource("Animation_got24"),
"Aim_down_sight_hold": SubResource("Animation_at4yd"),
"RESET": SubResource("Animation_p33us"),
"Swing": SubResource("Animation_pb70m")
}

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 515
collision_mask = 513
script = ExtResource("1_vat5m")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2_mki4s")
weapons = Array[Resource("res://scripts/objects/weapon.gd")]([ExtResource("2_uh7ge")])

[node name="Camera" type="Camera3D" parent="Head"]
cull_mask = 1048573
current = true
fov = 90.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CameraItem" type="Camera3D" parent="Head/Camera/SubViewportContainer/SubViewport"]
cull_mask = 1047554
fov = 40.0

[node name="Container" type="Node3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -1, -2.25)

[node name="Muzzle" type="AnimatedSprite3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -0.75, -6)
layers = 2
sprite_frames = ExtResource("4_m6ukc")
frame = 2

[node name="Anime" type="AnimationPlayer" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
libraries = {
"": SubResource("AnimationLibrary_erlf8")
}

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -10)
collision_mask = 65535
collide_with_areas = true

[node name="InteractCast" type="RayCast3D" parent="Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -3)
collision_mask = 65535
collide_with_areas = true

[node name="HoldPosition" type="Marker3D" parent="Head/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0208323, -1.11286)

[node name="ShotLight" type="DirectionalLight3D" parent="Head"]
visible = false
light_color = Color(1, 1, 0.290196, 1)
light_energy = 0.908
sky_mode = 2

[node name="Cooldown" type="Timer" parent="Head"]
one_shot = true

[node name="ReloadCooldown" type="Timer" parent="Head"]
one_shot = true

[node name="SoundFootsteps" type="AudioStreamPlayer" parent="Head"]
stream = ExtResource("5_ics1s")
volume_db = -80.0
autoplay = true

[node name="Shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("2_b0fo8")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5
